src/np222kk/dv507/a2/test/cases/positive/test_controlStatements.ofp
# test_controlStatements

void main() {
    int a = 1;
    
    while (a < 10) {
        a = a+1;

        if (true) a = a+1;
    }

    while (a<10*2)
        a = a +2;

    if (1 + 2 < 3 + 4) {
        print(1);
    } else if (false) 
        println(2);
    
    else if (true) {
        if (a < 3)
            a = 2;
            }
    else {
        print(4);
    }

}