src/np222kk/dv507/a2/test/cases/negative/test_neg_controlStatements.ofp
# test_neg_controlStatements

void main() {
    while true {
        int a = 1;
    }
    int x;
    else
        x = 1;
}